<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>Lv-427.Java</groupId>
    <artifactId>greencity</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Green City</name>
    <description>Project named Green City by SoftServe ITA team Lv-427.Java</description>
    <packaging>pom</packaging>

    <modules>
        <module>service-api</module>
        <module>dao</module>
        <module>core</module>
        <module>service</module>
    </modules>

    <properties>
        <!-- java -->
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>

        <!-- spring -->
        <springdoc.openapi.starter.webmvc.ui.version>2.8.13</springdoc.openapi.starter.webmvc.ui.version>
        <spring.cloud.version>2025.0.0</spring.cloud.version>

        <!-- templating -->
        <thymeleaf.spring6.version>3.1.3.RELEASE</thymeleaf.spring6.version>
        <thymeleaf.extras.version>3.0.4.RELEASE</thymeleaf.extras.version>
        <!-- /spring -->

        <!-- http -->
        <!-- client -->
        <jsoup.version>1.21.2</jsoup.version>
        <apache.http.client.version>5.5.1</apache.http.client.version>

        <!-- server -->
        <jakarta.servlet.api.version>6.1.0</jakarta.servlet.api.version>
        <tomcat.version>11.0.12</tomcat.version>
        <!-- /http -->

        <!-- commons -->
        <commons.collections4.version>4.5.0</commons.collections4.version>
        <commons.lang3.version>3.19.0</commons.lang3.version>
        <commons.io.version>2.20.0</commons.io.version>
        <commons.dbcp2.version>2.13.0</commons.dbcp2.version>

        <!-- DB -->
        <liquibase.version>5.0.1</liquibase.version>
        <postgresql.version>42.7.8</postgresql.version>

        <!-- JWT -->
        <jjwt.version>0.12.3</jjwt.version>

        <!-- mapping -->
        <modelmapper.version>3.2.5</modelmapper.version>

        <!-- logging -->
        <slf4j.api.version>2.0.17</slf4j.api.version>

        <!-- git -->
        <org.eclipse.jgit.version>7.4.0.202509020913-r</org.eclipse.jgit.version>

        <!-- google services -->
        <google.maps.services.version>2.2.0</google.maps.services.version>
        <google.cloud.storage.version>2.58.1</google.cloud.storage.version>

        <!-- azure services -->
        <azure.storage.blob.version>12.31.3</azure.storage.blob.version>

        <!-- spreadsheets (excel, etc.) -->
        <apache.poi.version>5.4.1</apache.poi.version>

        <!-- vector geometry -->
        <jts.core.version>1.20.0</jts.core.version>

        <!-- env vars -->
        <io.github.cdimascio.dotenv.version>3.2.0</io.github.cdimascio.dotenv.version>

        <!-- JNA (native libs access from java -->
        <net.java.dev.jna.version>5.18.1</net.java.dev.jna.version>

        <!-- starters -->
        <ldm.version>0.0.6</ldm.version>

        <!-- testing -->
        <testcontainers.version>1.21.3</testcontainers.version>
        <json.path.version>2.9.0</json.path.version>
        <h2.version>2.4.240</h2.version>
        <mockwebserver.version>4.12.0</mockwebserver.version>

        <!-- annotation processors -->
        <lombok.version>1.18.42</lombok.version>
        <hibernate.jpamodelgen.version>6.6.32.Final</hibernate.jpamodelgen.version>

        <!-- plugins -->
        <azure.webapp.maven.plugin.version>2.14.1</azure.webapp.maven.plugin.version>
        <maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>
        <checkstyle.maven.plugin.version>3.6.0</checkstyle.maven.plugin.version>
        <formatter.maven.plugin.version>2.29.0</formatter.maven.plugin.version>
        <jacoco.maven.plugin.version>0.8.13</jacoco.maven.plugin.version>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <sonar.language>java</sonar.language>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>sonar</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <sonar.exclusions>**/CustomExceptionHandler.java</sonar.exclusions>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.maven.plugin.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/config/*</exclude>
                        <exclude>**/enums/*</exclude>
                        <exclude>**/exceptions/*</exclude>
                        <exclude>**/entity/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${formatter.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configFile>${project.basedir}/../formatter.xml</configFile>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <id>check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.hibernate.orm</groupId>
                            <artifactId>hibernate-jpamodelgen</artifactId>
                            <version>${hibernate.jpamodelgen.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-maven-plugin</artifactId>
                <version>${liquibase.version}</version>
            </plugin>
        </plugins>
    </build>
</project>

